[fix] java 8 feature fix